--- a/index.html
+++ b/index.html
@@ -18,104 +18,106 @@
   <body>
     <!-- MAIN CONTAINER -->
     <main class="main-container">
-      <!-- VIOLET ARTICLE -->
-      <article class="article-violet">
-        <section class="section-personal-data">
-          <img
-            class="section-personal-data__img"
-            src="./images/image-daniel.jpg"
-            alt="daniel image"
-          />
-          <div class="section-personal-data__data">
-            <h3>Daniel Clifford</h3>
-            <p>Verified Graduate</p>
-          </div>
-        </section>
-        <section class="section-title">
-          I received a job offer mid-course, and the subjects I learned were
-          current, if not more so, in the company I joined. I honestly feel I
-          got every penny’s worth.
-        </section>
-        <section class="section-description">
-          “ I was an EMT for many years before I joined the bootcamp. I’ve been
-          looking to make a transition and have heard some people who had an
-          amazing experience here. I signed up for the free intro course and
-          found it incredibly fun! I enrolled shortly thereafter. The next 12
-          weeks was the best - and most grueling - time of my life. Since
-          completing the course, I’ve successfully switched careers, working as
-          a Software Engineer at a VR startup. ”
-        </section>
-      </article>
-      <!-- GRAY ARTICLE  -->
-      <article class="article-gray">
-        <section class="section-personal-data">
-          <img
-            class="section-personal-data__img"
-            src="./images/image-jonathan.jpg"
-            alt="jonathan image"
-          />
-          <div class="section-personal-data__data">
-            <h3>Jonathan Walters</h3>
-            <p>Verified Graduate</p>
-          </div>
-        </section>
-        <section class="section-title">
-          The team was very supportive and kept me motivated
-        </section>
-        <section class="section-description">
-          “ I started as a total newbie with virtually no coding skills. I now
-          work as a mobile engineer for a big company. This was one of the best
-          investments I’ve made in myself. ”
-        </section>
-      </article>
-      <!-- WHITE 1 ARTICLE  -->
-      <article class="article-white-1">
-        <section class="section-personal-data">
-          <img
-            class="section-personal-data__img"
-            src="./images/image-jeanette.jpg"
-            alt="janette image"
-          />
-          <div class="section-personal-data__data">
-            <h3>Jeanette Harmon</h3>
-            <p>Verified Graduate</p>
-          </div>
-        </section>
-        <section class="section-title">
-          An overall wonderful and rewarding experience
-        </section>
-        <section class="section-description">
-          “ Thank you for the wonderful experience! I now have a job I really
-          enjoy, and make a good living while doing something I love. ”
-        </section>
-      </article>
-      <!-- BLACK ARTICLE  -->
-      <article class="article-black">
-        <section class="section-personal-data">
-          <img
-            class="section-personal-data__img"
-            src="./images/image-patrick.jpg"
-            alt="patrick image"
-          />
-          <div class="section-personal-data__data">
-            <h3>Patrick Abrams</h3>
-            <p>Verified Graduate</p>
-          </div>
-        </section>
-        <section class="section-title">
-          Awesome teaching support from TAs who did the bootcamp themselves.
-          Getting guidance from them and learning from their experiences was
-          easy.
-        </section>
-        <section class="section-description">
-          “ The staff seem genuinely concerned about my progress which I find
-          really refreshing. The program gave me the confidence necessary to be
-          able to go out in the world and present myself as a capable junior
-          developer. The standard is above the rest. You will get the personal
-          attention you need from an incredible community of smart and amazing
-          people. ”
-        </section>
-      </article>
+      <div class="cuatro">
+        <!-- VIOLET ARTICLE -->
+        <article class="article-violet">
+          <section class="section-personal-data">
+            <img
+              class="section-personal-data__img"
+              src="./images/image-daniel.jpg"
+              alt="daniel image"
+            />
+            <div class="section-personal-data__data">
+              <h3>Daniel Clifford</h3>
+              <p>Verified Graduate</p>
+            </div>
+          </section>
+          <section class="section-title">
+            I received a job offer mid-course, and the subjects I learned were
+            current, if not more so, in the company I joined. I honestly feel I
+            got every penny’s worth.
+          </section>
+          <section class="section-description">
+            “ I was an EMT for many years before I joined the bootcamp. I’ve
+            been looking to make a transition and have heard some people who had
+            an amazing experience here. I signed up for the free intro course
+            and found it incredibly fun! I enrolled shortly thereafter. The next
+            12 weeks was the best - and most grueling - time of my life. Since
+            completing the course, I’ve successfully switched careers, working
+            as a Software Engineer at a VR startup. ”
+          </section>
+        </article>
+        <!-- GRAY ARTICLE  -->
+        <article class="article-gray">
+          <section class="section-personal-data">
+            <img
+              class="section-personal-data__img"
+              src="./images/image-jonathan.jpg"
+              alt="jonathan image"
+            />
+            <div class="section-personal-data__data">
+              <h3>Jonathan Walters</h3>
+              <p>Verified Graduate</p>
+            </div>
+          </section>
+          <section class="section-title">
+            The team was very supportive and kept me motivated
+          </section>
+          <section class="section-description">
+            “ I started as a total newbie with virtually no coding skills. I now
+            work as a mobile engineer for a big company. This was one of the
+            best investments I’ve made in myself. ”
+          </section>
+        </article>
+        <!-- WHITE 1 ARTICLE  -->
+        <article class="article-white-1">
+          <section class="section-personal-data">
+            <img
+              class="section-personal-data__img"
+              src="./images/image-jeanette.jpg"
+              alt="janette image"
+            />
+            <div class="section-personal-data__data">
+              <h3>Jeanette Harmon</h3>
+              <p>Verified Graduate</p>
+            </div>
+          </section>
+          <section class="section-title">
+            An overall wonderful and rewarding experience
+          </section>
+          <section class="section-description">
+            “ Thank you for the wonderful experience! I now have a job I really
+            enjoy, and make a good living while doing something I love. ”
+          </section>
+        </article>
+        <!-- BLACK ARTICLE  -->
+        <article class="article-black">
+          <section class="section-personal-data">
+            <img
+              class="section-personal-data__img"
+              src="./images/image-patrick.jpg"
+              alt="patrick image"
+            />
+            <div class="section-personal-data__data">
+              <h3>Patrick Abrams</h3>
+              <p>Verified Graduate</p>
+            </div>
+          </section>
+          <section class="section-title">
+            Awesome teaching support from TAs who did the bootcamp themselves.
+            Getting guidance from them and learning from their experiences was
+            easy.
+          </section>
+          <section class="section-description">
+            “ The staff seem genuinely concerned about my progress which I find
+            really refreshing. The program gave me the confidence necessary to
+            be able to go out in the world and present myself as a capable
+            junior developer. The standard is above the rest. You will get the
+            personal attention you need from an incredible community of smart
+            and amazing people. ”
+          </section>
+        </article>
+      </div>
       <!-- WHITE 2 ARTICLE  -->
       <article class="article-white-2">
         <section class="section-personal-data">
